--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@stitches/react": "^1.2.8",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
